# tap-opensea

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-opensea.sh  tox.ini
tap_opensea/: auth.py  client.py  streams.py  tap.py
tap_opensea/tests/: __init__.py  test_core.py
