[tool.poetry]
name = "tap-opensea"
version = "0.0.1"
description = "`tap-opensea` is a Singer tap for opensea, built with the Meltano SDK for Singer Taps."
authors = ["Pablo Seibelt"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-opensea = 'tap_opensea.tap:Tapopensea.cli'
