[tool.poetry]
name = "tap-opensea"
version = "0.0.1"
description = "`tap-opensea` is a Singer tap for opensea, built with the Meltano SDK for Singer Taps."
authors = ["Pablo Seibelt"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-opensea = 'tap_opensea.tap:Tapopensea.cli'
